Fixed spacing on contact page

--- a/css/style.css
+++ b/css/style.css
@@ -452,7 +452,7 @@ p {
     margin: auto;
 }
 #email h2, h3, h4, h5, h6 {
-    margin: 5px 20px;
+    margin: 10px 20px;
     padding: 10px;
     text-align: center;
 }
